# webscrapy

./: .gitignore  prepare-env.sh  prepare-venv.sh  pyproject.toml  set-venv.sh
examples/: scrapy-freebsd.sh  webscrapy-freebsd.sh  webscrapy-httpwg.sh  webscrapy-quotes.sh
webscrapy/: get_all_spider.py
