[tool.poetry]
name = "webscrapy"
version = "0.1.0"
description = "Download of all linked website content"
authors = ["Eduardo Vieira <eduardoenemark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "2.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
getallspider = "webscrapy.get_all_spider:main"